--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	
+
 	font-family: 'Raleway', sans-serif;
 }
 
@@ -29,4 +29,17 @@ body {
 
 .intro h6 {
   font-size: 120%;
+}
+
+.projects-title h1 {
+    font-family: 'Roboto',sans-serif;
+    font-weight: 300;
+    font-size: 300%;
+    color: #000;
+    text-align: center;
+    padding-bottom: 1%;
+}
+
+.card-img-top {
+  width: 100%;
 }
