--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     background-color: #464646;
     min-height: 100vh;
 }
