--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     background-color: #464646;
     min-height: 100vh;
 }
@@ -161,4 +161,16 @@ button:focus {
 
 .hideMeQuicker {
   opacity:0;
+}
+
+@media screen and (max-width: 990px) and (min-width: 768px) {
+  .skill {
+    margin-left: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .card {
+    margin: 15px;
+  }
 }
