--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,13 +52,19 @@ body {
 
 .card-img-top {
   width: 100%;
+
 }
 
 .card {
   overflow: hidden;
-  box-shadow: 0 12px 15px 0 rgba(0,0,0,0.16), 0 12px 20px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 5px 7px 0 rgba(0,0,0,0.16), 0 5px 10px 0 rgba(0,0,0,0.12);
   position: relative;
   display: block;
+  height: 100%;
+}
+
+.card:hover {
+  box-shadow: 0 12px 15px 0 rgba(0,0,0,0.16), 0 12px 20px 0 rgba(0,0,0,0.12);
 }
 
 .face {
